Implement deck creation

--- a/codex/views/codex/index.ejs
+++ b/codex/views/codex/index.ejs
@@ -9,7 +9,7 @@
 </nav>
 
 <div id="nav-title">
-    <form action="/search" method="GET">
+    <form action="/codex/search" method="GET">
         <input id="searchbar" type="text" name="name" placeholder="Search Cards">
     </form>
 </div>
