--- a/codex/public/stylesheets/style.css
+++ b/codex/public/stylesheets/style.css
@@ -28,6 +28,24 @@ a > div {
   height: 30px;
 }
 
+.wrapper {
+  display: flex;
+  justify-content: flex-start;
+  flex-direction: row;
+}
+
+.deck {
+  display: flex;
+  border: solid 1px black;
+  width: 10vmin;
+  height: 14vmin;
+  border-radius: 20%;
+  margin: 3vmin 2vmin 3vmin 2vmin;
+  justify-content: center;
+  align-items: center;
+  font-size: 12px;
+}
+
 #card-container {
   display: flex;
   flex-direction: row;
@@ -53,13 +71,5 @@ a > div {
 }
 
 #new-deck {
-  display: flex;
-  border: solid 1px black;
-  width: 10vmin;
-  height: 14vmin;
-  border-radius: 20%;
-  margin-top: 3vmin;
-  justify-content: center;
-  align-items: center;
   font-size: 6vmin;
 }
