--- a/codex/views/decks/view.ejs
+++ b/codex/views/decks/view.ejs
@@ -1,3 +1,7 @@
 <%- include("../partials/header.ejs") %>
 <h1> <%= deck.name %> </h1>
+
+
+
+<button>Edit</button>
 <%- include("../partials/footer.ejs") %>
