--- a/codex/views/decks/add.ejs
+++ b/codex/views/decks/add.ejs
@@ -6,11 +6,10 @@
     </form>
 </div>
 
-<div id="card-container">
-    <% results.forEach(card => { %>
-        <div class="results"><a href="<%= card._id %>"><img src="<%=card.image_uris.small%>"></a></div>
-    <% }) %>
-</div>
-
+<% if (!results) { %> <h1>Search for cards to add</h1> <% } else { %>
+    <% results.forEach(card => { %> 
+        <img src="<%=card.image_uris.small%>">
+    <% }) %> 
+<% } %>
 
 <%- include('../partials/footer.ejs') %>
