--- a/codex/views/partials/header.ejs
+++ b/codex/views/partials/header.ejs
@@ -7,3 +7,11 @@
     <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 <body>
+    <nav>
+        <a href="/">Home |</a>
+        <% if (user) { %>
+            <a href="/logout">LOGOUT</a>    
+            <% } else { %>
+                <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+        <% } %>
+    </nav>
