Update views and routes, edit view allows adding/removing

--- a/codex/views/decks/view.ejs
+++ b/codex/views/decks/view.ejs
@@ -31,5 +31,5 @@
     </div>
 </div>
 
-<a href="<%=deck.id%>/add"><button>Add Cards</button></a>
+<a href="<%=deck.id%>/edit"><button>Add Cards</button></a>
 <%- include("../partials/footer.ejs") %>
