define deck delete route

--- a/codex/views/decks/view.ejs
+++ b/codex/views/decks/view.ejs
@@ -31,5 +31,8 @@
     </div>
 </div>
 
+<form action="<%= deck.id %>?_method=DELETE" method="POST">
+    <button type="submit">DELETE DECK</button>
+</form>
 <a href="<%=deck.id%>/edit"><button>Add Cards</button></a>
 <%- include("../partials/footer.ejs") %>
