--- a/codex/views/decks/view.ejs
+++ b/codex/views/decks/view.ejs
@@ -9,6 +9,12 @@
 <div id="mainwrapper">
     <div id="side-bar">
         <h1 id="deck-title"> <%= title %> </h1>
+        <div id="deck-title">
+            <h4>
+                Deck Limit: <%=deck.cards.length%>/50
+            </h4>
+        </div>
+                
         <form id="filters" action="">
             <select name="" id="">
                 <option value="">filter</option>
