update styling for home, new deck, search

--- a/codex/views/codex/index.ejs
+++ b/codex/views/codex/index.ejs
@@ -1,8 +1,8 @@
 <%- include('../partials/header.ejs') %>
 
-<div id="nav-title">
+<div id="search-title">
     <form action="/codex/search" method="GET">
-        <input id="searchbar" type="text" name="name" placeholder="Search Cards">
+        <input class="searchbar" type="text" name="name" placeholder="Search Cards">
     </form>
 </div>
 
