--- a/codex/views/partials/header.ejs
+++ b/codex/views/partials/header.ejs
@@ -4,14 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MTG Codex</title>
-    <link rel="stylesheet" href="/stylesheets/style.css">
+    <link rel="stylesheet" href="/stylesheets/global-style.css">
 </head>
 <body>
-    <nav>
-        <a href="/">Home |</a>
+    <nav id="nav-bar">
         <% if (user) { %>
-            <a href="/logout">LOGOUT</a>    
+            <div id="user">
+                <img id="user-image" src="<%=user.avatar%>">
+                <a id="user-logout" href="/logout">LOGOUT</a>    
+            </div>
             <% } else { %>
-                <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
-        <% } %>
+                <a href="/auth/google" class="login">LOG IN&nbsp;<img id="login-icon" src="https://i.imgur.com/FHjYyi0.png"></a>
+            <% } %>
+            <div id="site-title"><h1><a href="/">MTG Codex</a></h1></div>
+            <div></div>
     </nav>
