--- a/codex/views/codex/index.ejs
+++ b/codex/views/codex/index.ejs
@@ -1,6 +1,6 @@
 <%- include('../partials/header.ejs') %>
 
-<div id="search-title">
+<div class="search">
     <form action="/codex/search" method="GET">
         <input class="searchbar" type="text" name="name" placeholder="Search Cards">
     </form>
