--- a/codex/public/stylesheets/global-style.css
+++ b/codex/public/stylesheets/global-style.css
@@ -83,6 +83,7 @@ a > div {
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: flex-start;
+  border: 1px solid black;
 }
 
 .results {
@@ -98,7 +99,7 @@ a > div {
   flex-direction: column;
   align-items: center;
   height: 100vmax;
-  background-color: #313131;
+  background-color: #1e1e1e ;
 }
 
 .form {
@@ -109,5 +110,52 @@ a > div {
 
 .form > input{
   text-align: center;
+}
+
+/*view deck*/
+
+#deck-view {
+  flex-direction: row;
+}
+
+deck-view > div {
+  
+}
+
+#deck {
+  height: 75vmin;
+  width: 75vmax;
+  overflow-y: scroll;
+  border: 1px solid black;
+
+  margin: 0 0 0 2vmin;
+  background-color: #1e1e1e ;
+}
+
+#side-panel {
+  flex-direction: column;
+
+  height: 75vmin;
+  width: 25vmin;
+
+  margin: 0 2vmin 0 0;
+}
+
+.panel-cell {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  height: 7vmin;
+  background-color: #1e1e1e ;
+  text-align: center;
+}
+
+.panel-button {
+  margin-top: 2vmin;
+}
+
+.panel-button > button {
+  width: 100%;
 }
 
