--- a/codex/views/decks/edit.ejs
+++ b/codex/views/decks/edit.ejs
@@ -14,7 +14,7 @@
             <div class="results">
                 <img src="<%=card.image_uris.small%>">
                 <form class="addForm" action="/decks/<%=deck.id%>" method="POST">
-                    <input type="hidden" value="<%=card.id%>">
+                    <input type="hidden" value="<%=card._id%>" name="cardId">
                     <input type="text" value="1" name="quantity">
                     <input type="submit" value="Add">
                 </form>
